Renamed folder from assets to src, all buttons done - fixing bugs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,120 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>UI KIT</title>
+		<link
+			href="https://fonts.googleapis.com/css?family=Lato:400,700|Open+Sans:400,600,700&amp;subset=latin-ext"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="main.css" />
 	</head>
-	<body></body>
+	<body>
+		<div class="container-100">
+			<div class="container">
+				<a href="#" class="btn btn--purple btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--pink btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--red btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--green btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--blue btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--yellow btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--black btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--grey btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--purple btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--pink btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--red btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--green btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--blue btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--yellow btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--black btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--grey btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-purple btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-pink btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-red btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-green btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-blue btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-yellow btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-black btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-grey btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-purple btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-pink btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-red btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-green btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-blue btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-yellow btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-black btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--outline-grey btn--rounded-lg space"
+					>Hello world</a
+				>
+			</div>
+		</div>
+	</body>
 </html>
