Added social icons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 			href="https://fonts.googleapis.com/css?family=Lato:400,700|Open+Sans:400,600,700&amp;subset=latin-ext"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+			integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+			crossorigin="anonymous"
+		/>
 		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body>
@@ -117,6 +123,18 @@
 				>
 				<a href="#" class="btn btn--outline-grey btn--rounded-lg space"
 					>Hello world</a
+				>
+				<a href="#" class="btn btn--facebook btn--rounded-lg space"
+					><i class="fab fa-facebook-f btn__icon"></i>Sign in with
+					Facebook</a
+				>
+				<a href="#" class="btn btn--twitter btn--rounded-lg space"
+					><i class="fab fa-twitter btn__icon"></i>Sign in with
+					Twitter</a
+				>
+				<a href="#" class="btn btn--google btn--rounded-lg space"
+					><i class="fab fa-google btn__icon"></i>Sign in with
+					Google</a
 				>
 			</div>
 		</div>
