Added component alert

--- a/index.html
+++ b/index.html
@@ -20,6 +20,38 @@
 	<body>
 		<div class="container-100">
 			<div class="container">
+				<div class="alert alert--success space">
+					<p class="alert__text">Success!</p>
+					<span class="alert__close">X</span>
+				</div>
+				<div class="alert alert--warning space">
+					<p class="alert__text">Warning!</p>
+					<span class="alert__close">X</span>
+				</div>
+				<div class="alert alert--error space">
+					<p class="alert__text">Error!</p>
+					<span class="alert__close">X</span>
+				</div>
+				<div class="alert alert--info space">
+					<p class="alert__text">Info!</p>
+					<span class="alert__close">X</span>
+				</div>
+				<div class="alert alert--success-light space">
+					<p class="alert__text">Success!</p>
+					<span class="alert__close">X</span>
+				</div>
+				<div class="alert alert--warning-light space">
+					<p class="alert__text">Warning!</p>
+					<span class="alert__close">X</span>
+				</div>
+				<div class="alert alert--error-light space">
+					<p class="alert__text">Error!</p>
+					<span class="alert__close">X</span>
+				</div>
+				<div class="alert alert--info-light space">
+					<p class="alert__text">Info!</p>
+					<span class="alert__close">X</span>
+				</div>
 				<a href="#" class="btn btn--purple btn--rounded-sm space"
 					>Hello world</a
 				>
