Added button size variants for button component

--- a/index.html
+++ b/index.html
@@ -21,139 +21,171 @@
 		<div class="container-100">
 			<div class="container">
 				<div class="alert alert--success space">
-					<p class="alert__text">Success!</p>
+					<span class="alert__text">Success!</span>
 					<span class="alert__close">X</span>
 				</div>
 				<div class="alert alert--warning space">
-					<p class="alert__text">Warning!</p>
+					<span class="alert__text">Warning!</span>
 					<span class="alert__close">X</span>
 				</div>
 				<div class="alert alert--error space">
-					<p class="alert__text">Error!</p>
+					<span class="alert__text">Error!</span>
 					<span class="alert__close">X</span>
 				</div>
 				<div class="alert alert--info space">
-					<p class="alert__text">Info!</p>
+					<span class="alert__text">Info!</span>
 					<span class="alert__close">X</span>
 				</div>
 				<div class="alert alert--success-light space">
-					<p class="alert__text">Success!</p>
+					<span class="alert__text">Success!</span>
 					<span class="alert__close">X</span>
 				</div>
 				<div class="alert alert--warning-light space">
-					<p class="alert__text">Warning!</p>
+					<span class="alert__text">Warning!</span>
 					<span class="alert__close">X</span>
 				</div>
 				<div class="alert alert--error-light space">
-					<p class="alert__text">Error!</p>
+					<span class="alert__text">Error!</span>
 					<span class="alert__close">X</span>
 				</div>
 				<div class="alert alert--info-light space">
-					<p class="alert__text">Info!</p>
+					<span class="alert__text">Info!</span>
 					<span class="alert__close">X</span>
 				</div>
-				<a href="#" class="btn btn--purple btn--rounded-sm space"
+				<a
+					href="#"
+					class="btn btn--purple btn--sm btn--rounded-sm space"
 					>Hello world</a
 				>
-				<a href="#" class="btn btn--pink btn--rounded-sm space"
+				<a href="#" class="btn btn--pink btn--sm btn--rounded-sm space"
 					>Hello world</a
 				>
-				<a href="#" class="btn btn--red btn--rounded-sm space"
+				<a href="#" class="btn btn--red btn--sm btn--rounded-sm space"
 					>Hello world</a
 				>
-				<a href="#" class="btn btn--green btn--rounded-sm space"
+				<a href="#" class="btn btn--green btn--sm btn--rounded-sm space"
 					>Hello world</a
 				>
-				<a href="#" class="btn btn--blue btn--rounded-sm space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--yellow btn--rounded-sm space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--black btn--rounded-sm space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--grey btn--rounded-sm space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--purple btn--rounded-lg space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--pink btn--rounded-lg space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--red btn--rounded-lg space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--green btn--rounded-lg space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--blue btn--rounded-lg space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--yellow btn--rounded-lg space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--black btn--rounded-lg space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--grey btn--rounded-lg space"
+				<a href="#" class="btn btn--blue btn--sm btn--rounded-sm space"
 					>Hello world</a
 				>
 				<a
 					href="#"
-					class="btn btn--outline-purple btn--rounded-sm space"
+					class="btn btn--yellow btn--sm btn--rounded-sm space"
 					>Hello world</a
 				>
-				<a href="#" class="btn btn--outline-pink btn--rounded-sm space"
+				<a href="#" class="btn btn--black btn--sm btn--rounded-sm space"
 					>Hello world</a
 				>
-				<a href="#" class="btn btn--outline-red btn--rounded-sm space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--outline-green btn--rounded-sm space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--outline-blue btn--rounded-sm space"
+				<a href="#" class="btn btn--grey btn--sm btn--rounded-sm space"
 					>Hello world</a
 				>
 				<a
 					href="#"
-					class="btn btn--outline-yellow btn--rounded-sm space"
+					class="btn btn--purple btn--sm btn--rounded-lg space"
 					>Hello world</a
 				>
-				<a href="#" class="btn btn--outline-black btn--rounded-sm space"
+				<a href="#" class="btn btn--pink btn--sm btn--rounded-lg space"
 					>Hello world</a
 				>
-				<a href="#" class="btn btn--outline-grey btn--rounded-sm space"
+				<a href="#" class="btn btn--red btn--sm btn--rounded-lg space"
 					>Hello world</a
 				>
-				<a
-					href="#"
-					class="btn btn--outline-purple btn--rounded-lg space"
+				<a href="#" class="btn btn--green btn--sm btn--rounded-lg space"
 					>Hello world</a
 				>
-				<a href="#" class="btn btn--outline-pink btn--rounded-lg space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--outline-red btn--rounded-lg space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--outline-green btn--rounded-lg space"
-					>Hello world</a
-				>
-				<a href="#" class="btn btn--outline-blue btn--rounded-lg space"
+				<a href="#" class="btn btn--blue btn--sm btn--rounded-lg space"
 					>Hello world</a
 				>
 				<a
 					href="#"
-					class="btn btn--outline-yellow btn--rounded-lg space"
+					class="btn btn--yellow btn--sm btn--rounded-lg space"
 					>Hello world</a
 				>
-				<a href="#" class="btn btn--outline-black btn--rounded-lg space"
+				<a href="#" class="btn btn--black btn--sm btn--rounded-lg space"
 					>Hello world</a
 				>
-				<a href="#" class="btn btn--outline-grey btn--rounded-lg space"
+				<a href="#" class="btn btn--grey btn--sm btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-purple btn--sm btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-pink btn--sm btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-red btn--sm btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-green btn--sm btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-blue btn--sm btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-yellow btn--sm btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-black btn--sm btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-grey btn--sm btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-purple btn--sm btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-pink btn--sm btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-red btn--sm btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-green btn--sm btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-blue btn--sm btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-yellow btn--sm btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-black btn--sm btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-grey btn--sm btn--rounded-lg space"
 					>Hello world</a
 				>
 				<a href="#" class="btn btn--facebook btn--rounded-lg space"
@@ -167,6 +199,142 @@
 				<a href="#" class="btn btn--google btn--rounded-lg space"
 					><i class="fab fa-google btn__icon"></i>Sign in with
 					Google</a
+				>
+				<a
+					href="#"
+					class="btn btn--purple btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--pink btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--red btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--green btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--blue btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--yellow btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--black btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--grey btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--purple btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--pink btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--red btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--green btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--blue btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--yellow btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--black btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a href="#" class="btn btn--grey btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-purple btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-pink btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-red btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-green btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-blue btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-yellow btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-black btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-grey btn--lg btn--rounded-sm space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-purple btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-pink btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-red btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-green btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-blue btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-yellow btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-black btn--lg btn--rounded-lg space"
+					>Hello world</a
+				>
+				<a
+					href="#"
+					class="btn btn--outline-grey btn--lg btn--rounded-lg space"
+					>Hello world</a
 				>
 			</div>
 		</div>
